# ReplyStack

./: .cursorrules  .env.example  .env.local.example  .gitignore  .prettierignore  README.md  TESTING_GUIDE.md  TESTS_CREATED.md  TEST_SUMMARY.md  biome.json  eslint.config.mjs  jest.config.js  jest.setup.js  middleware.ts  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  stryker.config.json  test-regex.mjs  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.local.json
__tests__/: README.md
__tests__/integration/: review-workflow.test.ts
__tests__/lib/: anthropic.test.ts  google.test.ts  stripe.test.ts  supabase-middleware.test.ts
__tests__/middleware/: middleware.test.ts
app/: globals.css  layout.tsx  page.old.tsx  page.tsx
app/(auth)/: layout.tsx
app/(dashboard)/: layout.tsx
app/pricing-faq/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/auth/: auth-divider.tsx  google-oauth-button.tsx  login-form.tsx  reset-password-form.tsx  signup-form.tsx  update-password-form.tsx
components/landing/: live-demo.tsx  waitlist-form.old.tsx
components/reviews/: generate-response-button.tsx  response-edit-modal.tsx  review-card.tsx  reviews-filters.tsx
components/settings/: google-connect-button.tsx  location-selector.tsx
components/ui/: button.tsx  input.tsx
components/voice-profile/: tone-quiz.tsx  voice-editor.tsx
docs/: API.md  ARCHITECTURE.md  BUSINESS.md  CHANGELOG.md  DECISIONS.md  DESIGN_SYSTEM.md  DOCSTRINGS.md  FEATURES.md  PROMPTS.md  ROADMAP.md  SETUP.md  SPEC.md  SUPABASE_SETUP.md  TEST_QUALITY.md
docs/templates/: INDEX.md  api-routes.md  components.md  database.md  patterns.md  server-components.md
lib/claude/: client.ts
lib/crypto/: encryption.ts
lib/google/: client.ts
lib/quiz/: questions.ts
lib/stripe/: client.ts
lib/supabase/: client.ts  (+5 more)
scripts/: generate-types.js  reencrypt-tokens.ts  test-mutation-example.sh
src/: middleware.ts
tests/: middleware.test.ts  smoke.test.ts
(+145 files in other folders)
