[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "answercraft-python"
version = "0.1.0"
description = "Python tooling for AnswerCraft: ML/AI modules and automation scripts."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []
optional-dependencies = {ml = ["numpy>=1.26", "pandas>=2.1", "scikit-learn>=1.4"], dev = ["ruff>=0.6", "pytest>=8.3"]}

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = ["-vv", "--tb=short"]
pythonpath = ["python/src", "python/automation"]


